# catala-miner

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  make-app.sh  pyproject.toml  run.bat  run.sh  venv-run
.claude/: launch.json
.github/workflows/: ci.yml
app/: anki.py  config.py  conjugation.py  db.py  desktop.py  dictionary.py  examples.py  forms.py  ipa.py  jobs.py  languages.py  main.py  media.py  nlp.py  piper_tts.py  share.py  stream.py  subs.py  transcribe.py  translate.py  tts.py  update.py  userdict.py  vocab.py  wikdict.py  youtube.py
assets/: AppIcon.icns
docs/: roadmap.md
docs/plans/: 2026-07-04-catala-miner.md  2026-07-05-v060-mineria-fluida.md  2026-07-07-v070-video-online-config.md  2026-07-07-v080-vocabulario-progreso.md
docs/specs/: 2026-07-04-catala-miner-design.md  2026-07-05-v060-mineria-fluida-design.md  2026-07-07-v070-video-online-config-design.md  2026-07-07-v080-vocabulario-progreso-design.md  2026-07-09-v090-streaming-ui-design.md
static/: app.js  i18n.js  index.html  manifest.webmanifest  style.css  sw.js
tests/: conftest.py  test_anki.py  test_api.py  test_api_v2.py  test_api_v3.py  test_api_v4.py  test_assets.py  test_cards.py  test_conjugation.py  test_db.py  test_dictionary.py  test_forms.py  test_media.py  test_nlp.py  test_share.py  test_smoke.py  test_stream.py  test_subs.py  test_translate.py  test_tts.py  test_update.py  test_userdict.py  test_word_status.py  test_youtube.py
