[project]
name = "catala-miner"
version = "0.8.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "requests>=2.32",
  "faster-whisper>=1.0",
  "ctranslate2>=4.0",
  "sentencepiece>=0.2",
  "huggingface_hub>=0.23",
  "yt-dlp>=2025.1.1",
  "spacy>=3.7",
  "wordfreq>=3.1",
  "pywebview>=5.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
