[project]
name = "catala-miner"
version = "0.9.4"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "requests>=2.32",
  "faster-whisper>=1.0",
  "ctranslate2>=4.0",
  "sentencepiece>=0.2",
  "huggingface_hub>=0.23",
  "yt-dlp>=2025.1.1",
  "spacy>=3.7",
  "wordfreq>=3.1",
  "pywebview>=5.0",
  "qrcode>=7.4",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.14", "pytest-cov>=7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, UP pyupgrade, B bugbear
select = ["E", "W", "F", "I", "UP", "B"]
# E501 líneas largas; B008 File()/Depends() en defaults es idiomático en FastAPI
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
